@@ -10,8 +10,9 @@
     <changelog>
         <![CDATA[
         <p>Changes in 4.8.1<br/>
-        [BEAM-1184] Reprojection dialog does not remember values ("Output Parameters")<br/>
+        [BEAM-1184] Reprojection dialog does not remember values<br/>
         [BEAM-1183] Improve reprojection UI usability<br/>
+        </p>
         <p>Changes in 4.8<br/>
         [BEAM-1159] Auto-group bands according to their names<br/>
         [BEAM-1147] Signed byte data type interpreted as unsigned byte<br/>
