@@ -12,8 +12,10 @@
     <changelog>
         <![CDATA[
         <p>Changes in 4.8.1<br/>
-          [BEAM-1184] Reprojection dialog does not remember values ("Output Parameters")<br/>
+          [BEAM-1184] Reprojection dialog does not remember values<br/>
           [BEAM-1183] Improve reprojection UI usability<br/>
+          [BEAM-1177] Index out of bounds for RGB View<br/>
+        </p>
         <p>Changes in 4.8:<br/>
           [BEAM-1169] On KDE (linux) the Java Desktop-API is not supported.<br/>
           [BEAM-1159] Auto-group bands according to their names<br/>
@@ -175,7 +177,6 @@
     </dependency>
     <dependency>
         <module>beam-ui</module>
-        <version>4.8.1</version>
     </dependency>
     <dependency>
         <module>beam-processing</module>
